--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "fgregg-cors-proxy" #Must be unique in Heroku
-          heroku_email: "fgregg@gmail.com"
+          heroku_email: "fgregg@datamade.us"
